--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@esm-bundle/autopublish-template",
+  "name": "@esm-bundle/angular__common",
   "version": "20.0.0",
   "description": "Repo to test esm-bundle's automatic publishing",
   "main": "index.js",
@@ -27,16 +27,18 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/esm-bundle/autopublish-template.git"
+    "url": "git+https://github.com/esm-bundle/angular__common.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/esm-bundle/autopublish-template/issues"
+    "url": "https://github.com/esm-bundle/angular__common/issues"
   },
-  "homepage": "https://github.com/esm-bundle/autopublish-template#readme",
+  "homepage": "https://github.com/esm-bundle/angular__common#readme",
   "devDependencies": {
-    "autopublish-template": "20.0.0",
-    "esm-bundle-scripts": "1.2.0"
+    "@angular/common": "^9.1.3",
+    "@angular/core": "npm:@esm-bundle/angular__core@9.1.3-fix.0",
+    "esm-bundle-scripts": "1.2.0",
+    "rxjs": "npm:@esm-bundle/rxjs@6.5.5-fix.1"
   }
 }
