--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@esm-bundle/angular__common",
   "version": "9.1.3",
   "description": "Repo to test esm-bundle's automatic publishing",
-  "main": "index.js",
-  "module": "esm/index.js",
+  "exports": {
+    ".": "./esm/es2015/angular-common.js"
+  },
   "type": "module",
   "scripts": {
     "test": "yarn build && concurrently -n w: 'yarn:test:*'",
