--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esm-bundle/angular__common",
-  "version": "9.1.3",
+  "version": "9.1.3-fix.0",
   "description": "Repo to test esm-bundle's automatic publishing",
   "exports": {
     ".": "./esm/es2015/angular-common.js"
