--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "9.1.13",
   "description": "Repo to test esm-bundle's automatic publishing",
   "exports": {
-    ".": "./esm/es2015/angular-common.js"
+    ".": "./es2015/ivy/angular-common.js"
   },
   "type": "module",
   "scripts": {
-    "test": "yarn build && concurrently -n w: 'yarn:test:*'",
+    "test": "pnpm run build && concurrently -n w: 'pnpm:test:*'",
     "test:browser": "karma start karma.conf.cjs --single-run",
     "debug:test:browser": "karma start karma.conf.cjs",
-    "test:unit": "mocha -r chai/register-expect 'node-test/**/*.*'",
-    "test:formatting": "prettier --check './**/*'",
-    "build": "rollup -c",
-    "prettier": "prettier --write './**/*'",
+    "test:formatting": "prettier --check .",
+    "build": "rimraf system es2015 && rollup -c",
+    "format": "prettier --write .",
     "release": "release-it",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "pnpm run build",
+    "postinstall": "ngcc --no-tsconfig --target @angular/common --properties es2015 --first-only"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && yarn test"
+      "pre-commit": "pretty-quick --staged && pnpm test"
     }
   },
   "files": [
-    "esm",
+    "es2015",
     "system"
   ],
   "repository": {
@@ -37,9 +37,24 @@
   },
   "homepage": "https://github.com/esm-bundle/angular__common#readme",
   "devDependencies": {
-    "@angular/common": "9.1.13",
-    "@angular/core": "npm:@esm-bundle/angular__core@9.1.3-fix.0",
+    "@angular/common": "11.1.1",
+    "@angular/compiler": "^11.1.1",
+    "@angular/compiler-cli": "^11.1.1",
+    "@angular/core": "^11.1.1",
+    "concurrently": "^5.3.0",
     "esm-bundle-scripts": "1.2.0",
-    "rxjs": "npm:@esm-bundle/rxjs@6.6.3"
+    "husky": "^4.3.8",
+    "karma": "^6.0.3",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "^4.0.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
+    "release-it": "^14.2.2",
+    "release-it-plugin-esm-bundle": "^2.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.38.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rxjs": "^6.6.3",
+    "typescript": "^4.1.3"
   }
 }
