--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,16 @@ env:
     - MOZ_HEADLESS=1
 addons:
   firefox: latest
-script: yarn test
+cache:
+  npm: false
+  directories:
+    - "~/.pnpm-store"
+before_install:
+  - curl -L https://unpkg.com/@pnpm/self-installer | node
+  - pnpm config set store-dir ~/.pnpm-store
+install:
+  - pnpm install
+script: pnpm test
 deploy:
   provider: script
   script: git remote remove origin && git remote add origin https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/$TRAVIS_REPO_SLUG && git symbolic-ref HEAD refs/heads/master && git fetch origin && git branch -u origin/master && echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc && npm run release
