--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
     "format": "prettier --write .",
     "release": "release-it",
     "prepublishOnly": "pnpm run build",
-    "postinstall": "ngcc --no-tsconfig --target @angular/common --properties es2015 --first-only"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && pnpm test"
-    }
+    "postinstall": "ngcc --no-tsconfig --target @angular/common --properties es2015 --first-only",
+    "postpublish": "pinst --enable"
   },
   "files": [
     "es2015",
@@ -43,10 +39,11 @@
     "@angular/core": "^11.1.1",
     "concurrently": "5.3.0",
     "esm-bundle-scripts": "1.2.0",
-    "husky": "5.0.9",
+    "husky": "5",
     "karma": "6.1.0",
     "karma-firefox-launcher": "2.1.0",
     "karma-jasmine": "4.0.1",
+    "pinst": "^2.1.6",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
     "release-it": "14.4.0",
