--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "rimraf system es2015 && rollup -c",
     "format": "prettier --write .",
     "release": "release-it",
-    "prepublishOnly": "pnpm run build",
+    "prepublishOnly": "pnpm build && pinst --disable",
     "postinstall": "ngcc --no-tsconfig --target @angular/common --properties es2015 --first-only",
     "postpublish": "pinst --enable"
   },
