--- a/package.json
+++ b/package.json
@@ -4,28 +4,26 @@
   "description": "Repo to test esm-bundle's automatic publishing",
   "exports": {
     ".": {
-      "es2015": "./es2015/ivy/angular-common.js",
-      "es2020": "./es2020/ivy/angular-common.js",
-      "default": "./es2020/ivy/angular-common.js"
+      "es2022": "./es2022/ivy/angular-common.js",
+      "default": "./es2022/ivy/angular-common.js"
     },
     "./http": {
-      "es2015": "./es2015/ivy/angular-http.mjs",
-      "es2020": "./es2020/ivy/angular-http.mjs",
-      "default": "./es2020/ivy/angular-http.mjs"
+      "es2022": "./es2022/ivy/angular-http.mjs",
+      "default": "./es2022/ivy/angular-http.mjs"
     },
     "./upgrade": {
-      "es2015": "./es2015/ivy/angular-upgrade.mjs",
-      "es2020": "./es2020/ivy/angular-upgrade.mjs",
-      "default": "./es2020/ivy/angular-upgrade.mjs"
+      "es2022": "./es2022/ivy/angular-upgrade.mjs",
+      "default": "./es2022/ivy/angular-upgrade.mjs"
     }
   },
   "type": "module",
   "scripts": {
+    "pretty-quick": "pretty-quick",
     "test": "pnpm run build && concurrently -n w: 'pnpm:test:*'",
     "test:browser": "karma start karma.conf.cjs --single-run",
     "debug:test:browser": "karma start karma.conf.cjs",
     "test:formatting": "prettier --check .",
-    "build": "rimraf system es2015 es2020 && rollup -c",
+    "build": "rimraf system es2022 && rollup -c",
     "format": "prettier --write .",
     "release": "release-it",
     "prepublishOnly": "pnpm build && pinst --disable",
@@ -33,8 +31,7 @@
     "postpublish": "pinst --enable"
   },
   "files": [
-    "es2015",
-    "es2020",
+    "es2022",
     "system"
   ],
   "repository": {
@@ -48,9 +45,9 @@
   },
   "homepage": "https://github.com/esm-bundle/angular__common#readme",
   "devDependencies": {
-    "@angular/common": "15.2.9",
-    "@angular/compiler": "15.2.9",
-    "@angular/compiler-cli": "15.2.9",
+    "@angular/common": "16.0.3",
+    "@angular/compiler": "16.0.3",
+    "@angular/compiler-cli": "16.0.3",
     "@angular/core": "13.3.0",
     "@rollup/plugin-babel": "6.0.3",
     "concurrently": "8.0.1",
@@ -65,9 +62,14 @@
     "release-it": "15.10.3",
     "release-it-plugin-esm-bundle": "3.0.0",
     "rimraf": "5.0.1",
-    "rollup": "2.79.1",
+    "rollup": "3.23.0",
     "rollup-plugin-terser": "7.0.2",
     "rxjs": "7.8.1",
     "typescript": "5.0.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "terser": "5.17.6"
+    }
   }
 }
