--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esm-bundle/angular__common",
-  "version": "16.0.5",
+  "version": "17.1.0",
   "description": "Repo to test esm-bundle's automatic publishing",
   "exports": {
     ".": {
@@ -45,11 +45,12 @@
   },
   "homepage": "https://github.com/esm-bundle/angular__common#readme",
   "devDependencies": {
-    "@angular/common": "16.0.5",
-    "@angular/compiler": "16.0.5",
-    "@angular/compiler-cli": "16.0.5",
-    "@angular/core": "13.3.0",
+    "@angular/common": "17.1.0",
+    "@angular/compiler": "17.1.0",
+    "@angular/compiler-cli": "17.1.0",
+    "@angular/core": "17.1.0",
     "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-terser": "0.4.4",
     "concurrently": "8.2.2",
     "esm-bundle-scripts": "1.2.0",
     "husky": "8.0.3",
@@ -57,19 +58,18 @@
     "karma-firefox-launcher": "2.1.2",
     "karma-jasmine": "5.1.0",
     "pinst": "3.0.0",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "pretty-quick": "4.0.0",
     "release-it": "17.0.1",
     "release-it-plugin-esm-bundle": "3.0.0",
     "rimraf": "5.0.5",
     "rollup": "4.9.5",
-    "rollup-plugin-terser": "7.0.2",
     "rxjs": "7.8.1",
     "typescript": "5.3.3"
   },
   "pnpm": {
     "overrides": {
-      "terser": "5.17.6"
+      "terser": "5.27.0"
     }
   }
 }
